- changed some scripts - added hover effects and background for the bar

--- a/page1.html
+++ b/page1.html
@@ -22,7 +22,9 @@
                 background-color: #ff9800;
                 color: white;
             }
-
+            a:hover{
+                color: #ff9800;
+            }
             .box {
                 width: 200px;
                 height: 200px;
