--- a/page1-logged.html
+++ b/page1-logged.html
@@ -22,13 +22,21 @@
                 background-color: #ff9800;
                 color: white;
             }
-
+            .bar a:hover{
+                color: #ff9800;
+            }
             .box {
                 width: 200px;
                 height: 200px;
                 background-color: #ffff;
                 position: relative;
+                box-shadow: 0 3px 3px black;
+                border-radius: 30px;
             }
+
+            .box:hover img {
+             transform: scale(1.1);
+             }
 
             .text{
                 font-family: 'Public Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
@@ -64,6 +72,7 @@
                 vertical-align: top;
                 box-shadow: 0 2px 2px black;
                 border-radius: 20px;
+                background-image: url("images/christmas.jpeg"); 
             }
             .bar img{
                 float: left;
@@ -75,7 +84,7 @@
             }
         </style>
     </head>
-    <body bgcolor="beige">
+    <body background="images/hotel.jpeg">
     <div class="text bar bg">
         <div>
         <a href="page1-logged.html">
@@ -87,31 +96,50 @@
                 <li><a href="page1.html">Home</a></li>
                 <li><a href="register.html">Book</a></li>
                 <li>
-                    <div id="usernamepass" style="color: purple;"><div>
+                    <a href="login.html">Logout</a>
                 </li>
+                <li>
+
+                </li>
+                <li>
+                    <div id="usernamepass" style="color: orange;"><div>
+                </li>
+
             </ul>
         </div>
     </div>
-    <center><br>
+    <br>
         <div class="text">
             <h1 style="font-weight: lighter;">
                 <i>Check out our best deals</i>
             </h1>
         </div>
         <div class="bg" style="box-shadow: 0px 0px 5px black;">
+            <center>
         <table cellspacing="1" cellpadding="100">
             <tr>
                 <td>
                     <div class="box">
+                    <a href="https://www.trivago.com/en-US/oar/hotel-marriott-mena-house-cairo?search=100-16405&msockid=2d79e09efbea67510659f4fcfaec66db">
                     <img src="images/marriot.png">
+                    </a>
                     <span class="ribbon">50% off on suites</span>
                     </div>
                 </td>
                 <td>
+                    <div class="box">
+                    <a href="https://www.bing.com/search?q=trivago%20four%20seasons&qs=n&form=QBRE&sp=-1&ghc=1&lq=0&pq=trivago%20four%20season&sc=4-19&sk=&cvid=261F6EEFAAF5491CAFD1266D24F1B12D&ghsh=0&ghacc=0&ghpl=">
                     <img src="images/four-seasons.png">
+                    </a>
+                    </div>
                 </td>
                 <td>
+                    <div class="box">
+                    <a href="https://www.trivago.com/en-US/oar/hotel-sheraton-cairo-hotel-towers?search=100-16405&msockid=2d79e09efbea67510659f4fcfaec66db">
                     <img src="images/sheraton.png">
+                    </a>
+                    <span class="ribbon">40% off on luxury rooms</span>
+                    </div>
                 </td>
             </tr>
             </table>
@@ -127,6 +155,7 @@
                 </center>
             </tr>
         </table>
+        </center>
         </div>
     </center>
     <script>
