--- a/page1.html
+++ b/page1.html
@@ -22,9 +22,6 @@
                 background-color: #ff9800;
                 color: white;
             }
-            a:hover{
-                color: #ff9800;
-            }
             .box {
                 width: 200px;
                 height: 200px;
@@ -33,6 +30,10 @@
                 box-shadow: 0 3px 3px black;
                 border-radius: 30px;
             }
+
+            .box:hover img {
+             transform: scale(1.1);
+             }
 
             .text{
                 font-family: 'Public Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
@@ -68,10 +69,14 @@
                 vertical-align: top;
                 box-shadow: 0 2px 2px black;
                 border-radius: 20px;
+                background-image: url("images/christmas.jpeg"); 
             }
             .bar img{
                 float: left;
                 height: 100%;
+            }
+            .bar a:hover{
+                color: #ff9800;
             }
             .bg{
                 background-color: white;
@@ -96,44 +101,51 @@
     </div>
     <br>
         <div class="text">
-            <h1 style="font-weight: Bolder">
-                <i>Check out our best deals</i>
+            <h1 style="font-weight: lighter">
+                Check out our best deals
             </h1>
         </div>
         <center>
         <div class="bg" style="box-shadow: 0px 0px 5px black;">
-        <table cellspacing="1" cellpadding="100">
-            <tr>
-                <td>
-                    <div class="box">
-                    <img src="images/marriot.png">
-                    <span class="ribbon">50% off on suites</span>
-                    </div>
-                </td>
-                <td>
-                    <div class="box">
-                    <img src="images/four-seasons.png">
-                    </div>
-                </td>
-                <td>
-                    <div class="box">
-                    <img src="images/sheraton.png">
-                    </div>
-                </td>
-            </tr>
+            <table cellspacing="1" cellpadding="100">
+                <tr>
+                    <td>
+                        <div class="box">
+                        <a href="https://www.trivago.com/en-US/oar/hotel-marriott-mena-house-cairo?search=100-16405&msockid=2d79e09efbea67510659f4fcfaec66db">
+                        <img src="images/marriot.png">
+                        </a>
+                        <span class="ribbon">50% off on suites</span>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="box">
+                        <a href="https://www.bing.com/search?q=trivago%20four%20seasons&qs=n&form=QBRE&sp=-1&ghc=1&lq=0&pq=trivago%20four%20season&sc=4-19&sk=&cvid=261F6EEFAAF5491CAFD1266D24F1B12D&ghsh=0&ghacc=0&ghpl=">
+                        <img src="images/four-seasons.png">
+                        </a>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="box">
+                        <a href="https://www.trivago.com/en-US/oar/hotel-sheraton-cairo-hotel-towers?search=100-16405&msockid=2d79e09efbea67510659f4fcfaec66db">
+                        <img src="images/sheraton.png">
+                        </a>
+                        <span class="ribbon">40% off on luxury rooms</span>
+                        </div>
+                    </td>
+                </tr>
+                </table>
+                <table>
+                <tr>
+                    <center>
+                    <td>
+                        <div class="box">
+                        <img src="images/hiton.jpg">
+                        <span class="ribbon">40% off on luxury rooms</span>
+                        </div>
+                    </td>
+                    </center>
+                </tr>
             </table>
-            <table>
-            <tr>
-                <center>
-                <td>
-                    <div class="box">
-                    <img src="images/hiton.jpg">
-                    <span class="ribbon">40% off on luxury rooms</span>
-                    </div>
-                </td>
-                </center>
-            </tr>
-        </table>
         </div>
     </center>
     </body>
